sandbox/output
StringCalculator.java:5: error: non-static method parse(String) cannot be referenced from a static context
        List<String> numbers = StringToIntParser.parse(string);
                                                ^
1 error
